--- a/assets/css/custom-styles.scss
+++ b/assets/css/custom-styles.scss
@@ -27,3 +27,10 @@
   margin-right: auto;
 }
 
+.slogan {
+  font-style: italic;
+  font-size: 1.2rem;
+  color: #cccccc;
+  margin-top: 1.5em;
+  text-align: center;
+}
